# hermes-polymarket-connector

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.hermes/plans/: 2026-06-09_143000-hermes-polymarket-action-layer.md
src/hermes_polymarket_action/: __init__.py  audit.py  cli.py  config.py  confirmation.py  execution.py  geoblock.py  models.py  risk.py  validation.py
tests/: test_audit.py  test_config.py  test_confirmation.py  test_execution.py  test_geoblock.py  test_models.py  test_risk.py  test_validation.py
